--- a/weathermap.css
+++ b/weathermap.css
@@ -19,5 +19,12 @@ body { margin: 0; padding: 0; }
 }
 
 .jumbotron {
-
+margin-top: 50px;
+  background-image: url("img/cloudy.jpg");
+  background-size: cover;
+  color: white;
+}
+.card-header {
+  background-color: #3B94D9;
+  color: white;
 }
