--- a/weathermap.css
+++ b/weathermap.css
@@ -23,8 +23,17 @@ margin-top: 50px;
   background-image: url("img/cloudy.jpg");
   background-size: cover;
   color: white;
+  min-height: 400px;
+  text-align: center;
+  display: flex;
 }
 .card-header {
   background-color: #3B94D9;
   color: white;
+
+}
+
+.lead {
+font-size: 300%;
+
 }
