--- a/weathermap.css
+++ b/weathermap.css
@@ -2,14 +2,14 @@
 
 
 body { margin: 0; padding: 0; }
-#map { width: 80%; height: 500px; }
+#map { width: 100%; height: 500px; }
 
 .coordinates {
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
   position: absolute;
   bottom: 40px;
-  left: 10px;
+  /*left: 10px;*/
   padding: 5px 10px;
   margin: 0;
   font-size: 11px;
